# 441Renderer

./: CMakeCache.txt  CMakeLists.txt  Camera.cxx  Makefile  cmake_install.cmake  diff.sh  project1d.cxx  project1f.cxx  reader1E.cxx  reader1F.cxx  run  shading.cxx  triangle.cxx
project1F.app/Contents/: Info.plist
project1F.app/Contents/MacOS/: project1F
